feat: socket.io 및 chatGpt API 연동 기초 작성

--- a/socket/tsconfig.json
+++ b/socket/tsconfig.json
@@ -1,15 +1,19 @@
 {
-  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "target": "ES5",
-    "module": "CommonJS",
-    "lib": ["ES5", "ES6"],
-    "sourceMap": true,
-    "strict": false,
-    "baseUrl": ".",
+    "target": "es2020",
+    "moduleResolution": "node",
+    "module": "es6",
+    "outDir": "./dist",
+    "strict": true,
+    "baseUrl": "src",
+    "paths": {},
     "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "outDir": "./build"
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react"
+  },
+  "ts-node": {
+    "esm" : true
   }
 }
