--- a/socket/package.json
+++ b/socket/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@types/koa": "^2.13.6",
     "@types/node": "^20.1.4",
@@ -18,9 +19,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "chatgpt": "^5.2.4",
     "dotenv": "^16.0.3",
     "koa": "^2.14.2",
-    "openai": "^3.2.1",
     "socket.io": "^4.6.1"
   }
 }
