--- a/socket/package.json
+++ b/socket/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "chatgpt": "^5.2.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "koa": "^2.14.2",
     "socket.io": "^4.6.1"
   }
